White space problem w/ CSS Grid FIX

--- a/css/style.css
+++ b/css/style.css
@@ -69,15 +69,16 @@ main {
     /* justify-items: center; */
     /* flex-direction: column; */
     display: grid;
-    /* grid-template-columns: 10vw 80vw 10vw; */
-    /* grid-template-rows: 30vh auto auto auto 40vh; */
+    /* grid-template-columns: 10vw 80vw 10vw;  */
+    grid-template-rows: 30vh auto auto auto auto;
     /* grid-auto-rows: 35vh; */
-    /* grid-template-areas: 
+    grid-template-areas: 
         "mimg"
         "simg"
         "simg2"
         "simg3"
-        ; */
+        "simg4"
+        ;
     /* height: 20vh; */
     /* max-height: 80vh; */
     /* overflow: hidden; */
@@ -135,6 +136,10 @@ time, h2, p {
     grid-area: simg4;
 }
 
+.small-img-blog-holder-4, .small-img-blog-holder-5, .small-img-blog-holder-6, .small-img-blog-holder-7 {
+    display: none;
+}
+
 .large-img {
     /* width: 100%;
     height: 100%; */
@@ -155,6 +160,7 @@ time, h2, p {
 }
 
 .load-more-blogs-btn{
+    grid-area: ldbtn; 
     /* background-color: #202020;
     color: white; */
     border: none;
